--- a/kasa/src/pages/Home/home.module.css
+++ b/kasa/src/pages/Home/home.module.css
@@ -29,3 +29,12 @@ border-radius: 25px;
    
     
 }
+.logement{
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-top: 43px;
+    padding-top: 6px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
