--- a/kasa/src/pages/Home/home.module.css
+++ b/kasa/src/pages/Home/home.module.css
@@ -19,10 +19,14 @@ border-radius: 25px;
     display: flex;
     align-items:center;
     justify-content:center;
+    position: relative;
 }
 .h1{
    
-   
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, 0);
     color: white;
     font-size: 48px;
   
