--- a/kasa/src/style/css/index.css
+++ b/kasa/src/style/css/index.css
@@ -5,5 +5,8 @@ body
   margin-left: auto;
   margin-right:auto;
   justify-content: center;
+  font-family: 'Montserrat';
+font-style: normal;
+font-weight: 500;
 
 }
