--- a/kasa/src/components/Carouselle/Carouselle.module.css
+++ b/kasa/src/components/Carouselle/Carouselle.module.css
@@ -1,5 +1,24 @@
 .img{
     width: 100%;
     height: 100%;
-    background: no-repeat center/100%
+    background: no-repeat center/100%;
+    display: flex;
+    justify-content: space-between;
+}
+.button{
+    color: #FFFFFF;
+    font-size: 80px;
+    background: unset;
+    border:unset;
+    margin-left: 23px;
+    margin-right: 23px;
+    margin-bottom: 23px;
+}
+@media (max-width: 768px) { 
+
+    .button{
+
+        font-size: 20px;
+    }
+
 }
