--- a/kasa/src/components/Rating/Rating.module.css
+++ b/kasa/src/components/Rating/Rating.module.css
@@ -1,8 +1,14 @@
 .rouge{
     color: #FF6060;
+    margin-left: 15px;
 }
 
 .gray{
    color: gray;
+   margin-left: 15px;
+}
  
+
+.contenant{
+    display: flex;
 }
