--- a/kasa/src/components/card/logementsCard/LogementCard.module.css
+++ b/kasa/src/components/card/logementsCard/LogementCard.module.css
@@ -2,15 +2,54 @@
 
 
 .link {
-  margin-top: 50px ;
+ 
   background-size: cover;
-    height: 340px ;
-    width: 340px;
+ 
+  width: 100%;
+
+
+aspect-ratio: 1/1;
+
     border-radius: 10px;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
+    Fill: Solid #FF6060;
+  
+    
   }
   .titre{
    margin-left: 20px;
    color: #FFFFFF;
   }
+  .lien{
+    /* Rectangle 2 */
+
+margin-top: 50px;
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+border-radius: 10px;
+min-width: 280px;
+max-width: 340px;
+width: 30%;
+aspect-ratio: 1/1;
+
+
+  }
+
+  @media (max-width: 768px) { 
+
+    .lien{
+    margin-top: 20px;
+      margin-left: 0px;
+      margin-right: 0px;
+    width: 100%;
+   aspect-ratio: 355/255;
+    }
+    .link{
+      width: 100%;
+      margin-left: 0px;
+      margin-right: 0px;
+      aspect-ratio: 355/255;
+    }
+
+  }
+ 
