--- a/kasa/src/pages/Logement/Logement.module.css
+++ b/kasa/src/pages/Logement/Logement.module.css
@@ -1,6 +1,7 @@
 .logement{
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 86%;
     margin-top: 43px;
     padding-top: 6px;
     display: flex;
@@ -65,7 +66,7 @@ h1{
 }
 .tags{
     display: flex;
-    align-items: start;
+    align-items: flex-start;
 
 }
 .tags p {
