--- a/kasa/src/style/css/index.css
+++ b/kasa/src/style/css/index.css
@@ -1,6 +1,6 @@
 body
 {
- 
+ background-color: #FFFFFF;
   max-width: 1440px;
   margin-left: auto;
   margin-right:auto;
@@ -8,5 +8,13 @@ body
   font-family: 'Montserrat';
 font-style: normal;
 font-weight: 500;
+font-size: 24px;
+color: #FF6060;
 
+}
+@media (max-width: 768px) { 
+  body
+  {
+    font-size: 18px ;
+  }
 }
