--- a/kasa/src/components/Carouselle/Carouselle.module.css
+++ b/kasa/src/components/Carouselle/Carouselle.module.css
@@ -10,8 +10,8 @@
     font-size: 80px;
     background: unset;
     border:unset;
-    margin-left: 23px;
-    margin-right: 23px;
+    margin-left: 1.8%;
+    margin-right: 1.8%;
     margin-bottom: 23px;
 }
 @media (max-width: 768px) { 
