--- a/kasa/src/pages/Logement/Logement.module.css
+++ b/kasa/src/pages/Logement/Logement.module.css
@@ -24,16 +24,14 @@
 
 }
 h1{
-    font-family: 'Montserrat';
-    font-style: normal;
+   
     font-weight: 500;
     font-size: 36px;
     margin: 0;
    
     }
     h2{
-        font-family: 'Montserrat';
-        font-style: normal;
+     
         font-weight: 500;
         font-size: 18px;
        
@@ -46,6 +44,11 @@ h1{
     display: flex;
     justify-self: end;
 
+}
+.infosP{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 .infosProprio p{
     margin: 0;
@@ -63,6 +66,7 @@ h1{
     border-radius: 32px;
     height: 64px;
     width: 64px;
+    
 }
 .tags{
     display: flex;
@@ -101,4 +105,25 @@ h1{
 .infos {
     width: 45%;
 }
+.rating{
+    margin-top: 27px;
+}
+@media (max-width: 768px) { 
 
+    .logement{
+
+        margin-top: 25px;
+    }
+
+    .carouselle{
+        width: 90%;
+        height: auto;
+        aspect-ratio: 325/225;
+    }
+    .infosLogementGeneral{
+       
+    }
+    .h1{font-size: 18px;}
+   
+
+}
