modification css about pour responsive

--- a/kasa/src/components/card/BandeauImage/BandeauImage.module.css
+++ b/kasa/src/components/card/BandeauImage/BandeauImage.module.css
@@ -13,3 +13,9 @@
     justify-content:center;
     position: relative;
 }
+@media (max-width: 768px) { 
+   .img{ max-width: 100%;
+    background-size: cover;
+   
+   }
+}
