--- a/kasa/src/pages/NotFound/NotFound.module.css
+++ b/kasa/src/pages/NotFound/NotFound.module.css
@@ -19,3 +19,28 @@
     margin-bottom: 159px;
     text-decoration: underline;
 }
+
+@media (max-width: 768px) { 
+
+    .titre{
+        font-size: 96px;
+        margin-top: 195;
+        font-weight: 700;
+    }
+
+    .text{
+        font-size: 18px;
+       margin-top: 11px;
+       width: 175px;
+     
+       margin-left: auto;
+       margin-right: auto;
+    }
+    .lien{
+        font-size: 14px;
+       margin-top: 133;
+       margin-bottom: 235px;
+    }
+    
+
+}
