--- a/kasa/src/components/card/BandeauImage/BandeauImage.module.css
+++ b/kasa/src/components/card/BandeauImage/BandeauImage.module.css
@@ -1,10 +1,9 @@
 .img{
+    background-color: black;
    
-    background-position: center;
-    background-image: url("../../../images/montagne.png");
-    opacity: 0.7;
     border-radius: 25px;
-    max-width: 86%;
+    max-width: 90%;
+    margin-top: 50px;
     margin-left: auto;
     margin-right:auto;
     height: 223px;
@@ -13,9 +12,17 @@
     justify-content:center;
     position: relative;
 }
+.img img{
+    height: 223px;
+    width: 100%;
+    opacity: 0.7;
+    object-fit: cover;
+    
+    border-radius: 25px;
+}
 @media (max-width: 768px) { 
-   .img{ max-width: 100%;
-    background-size: cover;
+   .imgs{ max-width: 100%;
+  
    
    }
 }
