corection bug defillement carouselle

--- a/kasa/src/components/card/BandeauImage/BandeauImage.module.css
+++ b/kasa/src/components/card/BandeauImage/BandeauImage.module.css
@@ -21,8 +21,8 @@
     border-radius: 25px;
 }
 @media (max-width: 768px) { 
-   .imgs{ max-width: 100%;
-  
+   .img{ max-width: 100%;
+    margin-top: 20px;
    
    }
 }
