--- a/kasa/src/components/Carouselle/Carouselle.module.css
+++ b/kasa/src/components/Carouselle/Carouselle.module.css
@@ -14,6 +14,13 @@
     margin-right: 1.8%;
     margin-bottom: 23px;
 }
+.buttonContenant{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+}
 @media (max-width: 768px) { 
 
     .button{
