--- a/kasa/src/components/card/logementsCard/LogementCard.module.css
+++ b/kasa/src/components/card/logementsCard/LogementCard.module.css
@@ -1,39 +1,46 @@
-
-
-
-.link {
- 
-  background-size: cover;
- 
-  width: 100%;
-
-
-aspect-ratio: 1/1;
-
-    border-radius: 10px;
-    display: flex;
-    align-items: flex-end;
-    Fill: Solid #FF6060;
-  
-    
-  }
-  .titre{
-   margin-left: 20px;
-   color: #FFFFFF;
-  }
-  .lien{
-    /* Rectangle 2 */
+.lien{
+  /* Rectangle 2 */
 
 margin-top: 50px;
-background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+background-color: #FF6060;
+
 border-radius: 10px;
 min-width: 280px;
 max-width: 340px;
 width: 30%;
 aspect-ratio: 1/1;
+opacity: 0.7;
+position: relative;
+
+}
 
 
+.link {
+  background: linear-gradient(180deg, rgba(255, 69, 69, 1) 0%, rgba(0, 0, 0, 1) 100%);
+
+  background-size: cover;
+ 
+  width: 100%;
+
+  position: absolute;
+aspect-ratio: 1/1;
+opacity: 0.7;
+    border-radius: 10px;
+    display: flex;
+    align-items: flex-end;
+   
+  
+    
   }
+  .titre{
+   margin-left: 20px;
+   height: 36px;
+   color: #FFFFFF;
+   position: absolute;
+   bottom:0px;
+   
+  }
+  
 
   @media (max-width: 768px) { 
 
