--- a/kasa/src/pages/Home/home.module.css
+++ b/kasa/src/pages/Home/home.module.css
@@ -30,10 +30,12 @@ border-radius: 25px;
    
     position: absolute;
     top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    transform: translate(0, -50%);
     color: white;
     font-size: 48px;
+  
   
    
     
@@ -59,13 +61,14 @@ border-radius: 25px;
         font-size: 24px;
         max-width: 217px;
         left:16px;
+        text-align:left;
         transform: translate(0, -50%);
     }
     .titre{
         margin-top: 16px;
         height:111px;
         border-radius: 10px;
-        width: 86%;
+        width: 90%;
     margin-right: auto;
     margin-left: auto ;
     }
