--- a/kasa/src/components/Carouselle/Carouselle.module.css
+++ b/kasa/src/components/Carouselle/Carouselle.module.css
@@ -4,6 +4,7 @@
     background: no-repeat center/100%;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 .button{
     color: #FFFFFF;
@@ -14,12 +15,24 @@
     margin-right: 1.8%;
     margin-bottom: 23px;
 }
+.button:hover{
+    cursor: pointer;
+}
 .buttonContenant{
     width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-self: center;
+}
+.compteur{
+    position: absolute;
+   
+    color: white;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    
 }
 @media (max-width: 768px) { 
 
